<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">YumiMall</string>

    <!-- Error Messages -->
    <string name="NoInternet">Please check your internet connection</string>
    <string name="Error500">Error: Something Went Wrong</string>
    <string name="BlankError">" should not be blank"</string>
    <string name="EmailError">"Email Id not valid"</string>
    <string name="EmailExistsError">"Email Id Already Exists"</string>
    <string name="InvalidUser">Invalid email id or password</string>
    <string name="retry">RETRY</string>

    <!-- Sign In / Sign Up -->
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Full Name *</string>
    <string name="email">Email *</string>
    <string name="password">Password *</string>
    <string name="passwordConfirm">Confirm Password *</string>
    <string name="mobile">Mobile Number *</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
