<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/back_signIn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/defaultMargin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/email_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/defaultMargin"
                android:layout_marginRight="@dimen/defaultMargin"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="@dimen/input_hint" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/password_SignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/showPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="@dimen/input_hint" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/showPasswordSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:src="@drawable/ic_eye_off_grey600_24dp" />

        </RelativeLayout>


        <TextView
            android:id="@+id/tv_Forgot_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/app_default"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_SignIn"
            android:visibility="gone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/app_default"
            android:layout_marginRight="@dimen/defaultMargin"
            android:background="@drawable/rounded_corner_blue"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:text="or" />

        <TextView
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center"
            android:text="Don't have an account? SignUp!"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>