<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/back_SignUp"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_left" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/defaultMargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">

                    <EditText
                        android:id="@+id/name_SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/defaultMargin"
                        android:layout_marginRight="@dimen/defaultMargin"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="@dimen/input_hint" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">

                    <EditText
                        android:id="@+id/mobile_SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/defaultMargin"
                        android:layout_marginRight="@dimen/defaultMargin"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="@dimen/input_hint" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">

                    <EditText
                        android:id="@+id/email_SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/defaultMargin"
                        android:layout_marginRight="@dimen/defaultMargin"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="@dimen/input_hint" />
                </android.support.design.widget.TextInputLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginRight="@dimen/defaultMargin">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/password_SignUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/showPassword"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/design_default_color_primary_dark"
                            android:textSize="@dimen/input_hint" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/showPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/ic_eye_off_grey600_24dp" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginRight="@dimen/defaultMargin">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/passwordConfirm_SignUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/showConfirmPassword"
                            android:hint="@string/passwordConfirm"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/design_default_color_primary_dark"
                            android:textSize="@dimen/input_hint" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/showConfirmPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/ic_eye_off_grey600_24dp" />
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progress_SignUp"
                    android:visibility="gone"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginTop="@dimen/app_default"
                    android:layout_marginRight="@dimen/defaultMargin"
                    android:background="@drawable/rounded_corner_blue"
                    android:text="@string/signUp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginEnd="0dp"
                    android:gravity="center"
                    android:text="or" />

                <TextView
                    android:id="@+id/tv_already_have_an_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:gravity="center"
                    android:text="Already have an account? SignIn!"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</RelativeLayout>